@@ -564,6 +564,10 @@ changed automatically as changes made by the Administrators are allowed to
 violate these restrictions.
 
 .TP
+\fIAdminPrioFactor\fP=<account>
+Specify the job's admin priority factor in the range of +/\-2147483645.
+Only privileged users can modify the value.
+.TP
 \fIAccount\fP=<account>
 Account name to be changed for this job's resource use.
 Value may be cleared with blank data value, "Account=".
