@@ -130,6 +130,9 @@ Weighted quality of service priority
 \fB%r\fR
 Partition name
 .TP
+\fB%S\fR
+Weighted admin priority.
+.TP
 \fB%t\fR
 Normalized TRES priorities
 .TP
