@@ -54,6 +54,7 @@
 void slurm_init_job_desc_msg(job_desc_msg_t * job_desc_msg)
 {
 	memset(job_desc_msg, 0, sizeof(job_desc_msg_t));
+	job_desc_msg->admin_prio_factor = NO_VAL;
 	job_desc_msg->alloc_sid		= NO_VAL;
 	job_desc_msg->contiguous	= NO_VAL16;
 	job_desc_msg->core_spec		= NO_VAL16;
