@@ -296,6 +296,8 @@ static int _job_rec_field(const struct job_record *job_ptr,
 		lua_pushstring (L, job_ptr->account);
 	} else if (!xstrcmp(name, "admin_comment")) {
 		lua_pushstring (L, job_ptr->admin_comment);
+	} else if (!xstrcmp(name, "admin_prio_factor")) {
+		lua_pushnumber (L, job_ptr->admin_prio_factor);
 	} else if (!xstrcmp(name, "array_task_cnt")) {
 		if (job_ptr->array_recs)
 			lua_pushnumber (L, job_ptr->array_recs->task_cnt);
@@ -731,6 +733,8 @@ static int _get_job_req_field(const struct job_descriptor *job_desc,
 		lua_pushstring (L, job_desc->acctg_freq);
 	} else if (!xstrcmp(name, "admin_comment")) {
 		lua_pushstring (L, job_desc->admin_comment);
+	} else if (!xstrcmp(name, "admin_prio_factor")) {
+		lua_pushnumber (L, job_desc->admin_prio_factor);
 	} else if (!xstrcmp(name, "alloc_node")) {
 		lua_pushstring (L, job_desc->alloc_node);
 	} else if (!xstrcmp(name, "argc")) {
@@ -990,6 +994,8 @@ static int _set_job_req_field(lua_State *L)
 		xfree(job_desc->admin_comment);
 		if (strlen(value_str))
 			job_desc->admin_comment = xstrdup(value_str);
+	} else if (!xstrcmp(name, "admin_prio_factor")) {
+		job_desc->admin_prio_factor = luaL_checknumber(L, 3);
 	} else if (!xstrcmp(name, "array_inx")) {
 		value_str = luaL_checkstring(L, 3);
 		xfree(job_desc->array_inx);
