@@ -225,6 +225,10 @@ extern int job_submit_plugin_submit(struct job_descriptor *job_desc,
 	xassert(verify_lock(PART_LOCK, READ_LOCK));
 
 	START_TIMER;
+
+	/* Set to NO_VAL so that it can only be set by the job submit plugin. */
+	job_desc->admin_prio_factor = NO_VAL;
+
 	rc = job_submit_plugin_init();
 	slurm_mutex_lock(&g_context_lock);
 	/* NOTE: On function entry read locks are set on config, job, node and
@@ -257,6 +261,10 @@ extern int job_submit_plugin_modify(struct job_descriptor *job_desc,
 	xassert(verify_lock(PART_LOCK, READ_LOCK));
 
 	START_TIMER;
+
+	/* Set to NO_VAL so that it can only be set by the job submit plugin. */
+	job_desc->admin_prio_factor = NO_VAL;
+
 	rc = job_submit_plugin_init();
 	slurm_mutex_lock(&g_context_lock);
 	for (i = 0; ((i < g_context_cnt) && (rc == SLURM_SUCCESS)); i++)
